--- a/1.1_Macro_Introd.md
+++ b/1.1_Macro_Introd.md
@@ -73,8 +73,6 @@ Black swans (or rare events, following *Nassim Taleb* theory), such as terrorist
 
 Moreover, as recent developments suggest, in the presence of **hysteresis,** defined as the dependence of the state of a system on its history, the negative consequences of pigtails, will translate into (nearly) permanent effects.
 
-![Chart, diagram, line chart
-
-Description automatically generated](Aspose.Words.ce2460d5-a73d-4555-b6de-4a7191d9e0a6.006.jpeg)
+![Chart, diagram, line chartDescription automatically generated](Aspose.Words.ce2460d5-a73d-4555-b6de-4a7191d9e0a6.006.jpeg)
 
 Along XX century, other authors, such as monetarists (Milton Friedman, among others) or neoclassics (Robert Lucas, as the main representative), have highlighted the (eventual) negative impact of stabilization policies through government interventions on long term growth of an economy.
